--- a/src/components/navbar/NavbarComponent.module.scss
+++ b/src/components/navbar/NavbarComponent.module.scss
@@ -2,7 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 30px;
+    align-items: center;
+    padding: 0px 30px;
+    
+    height: 10vh;
+
+    position: sticky;
+    top: 0px;
 }
 
 .actions {
