--- a/src/pages/profile/create/CreatePage.module.scss
+++ b/src/pages/profile/create/CreatePage.module.scss
@@ -1,3 +1,5 @@
+@import "colors.scss";
+
 .main {
     padding: 30px;
 
@@ -5,16 +7,21 @@
     flex-direction: center;
     align-items: center;
     justify-content: center;
+
+    height: 90vh;
 }
 
 .video_upload {
-    margin-top: 20vh;
+    height: 40%;
+    width: 50%;
 }
 
 .video_upload_area {
-    width: 480px;
-    height: 270px;
-    border: 1px solid black;
+    height: 100%;
+    width: 100%;
+
+    border: 1px solid $clr-ctx;
+    border-radius: 4px;
 
     display: flex;
     flex-direction: column;
@@ -47,7 +54,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    
+
     padding: 30px;
 }
 
@@ -84,4 +91,3 @@
 .video_description_input {
     margin: 10px 0px;
 }
-
