--- a/src/components/dropdown/DropdownComponent.module.scss
+++ b/src/components/dropdown/DropdownComponent.module.scss
@@ -1,3 +1,5 @@
+@import "colors.scss";
+
 @keyframes dropdown {
     from {
         height: 0px;
@@ -19,7 +21,7 @@
     overflow: hidden;
 
     border-radius: 4px;
-    z-index: 2;
+    background-color: $clr-bg;
 }
 
 .dropdown_item {
