--- a/src/pages/video/VideoPlayer.module.scss
+++ b/src/pages/video/VideoPlayer.module.scss
@@ -10,6 +10,14 @@
     padding: 10px;
 }
 
+.left_container {
+    flex: 3;
+}
+
+.video_desc {
+    padding: 10px;
+}
+
 .suggestions_container {
     flex: 1;
     
