--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -3,7 +3,7 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
     align-items: stretch;
     flex-wrap: wrap;
 }
