--- a/src/components/cards/VideoVerticalCard.module.scss
+++ b/src/components/cards/VideoVerticalCard.module.scss
@@ -23,16 +23,27 @@
     align-items: flex-start;
     padding: 10px;
 
-    height: 100px;
+    height: 140px;
     overflow: hidden;
 }
 
 .text_details {
     flex: 1;
+    align-self: stretch;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 
     padding: 0px 10px;
 }
 
 .avatar {
     border-radius: 50%;
+}
+
+.description {
+    flex: 1;
+
+    overflow: hidden;
 }
